--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "htmlparser2": "*",
-    "bluebird": "*"
+    "bluebird": "*",
+    "eval": "*"
   }
 }
